--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 @import "./css/header.css";
+@import "./css/main_section.css";
 
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+}
+
+body {
+	font-family: "Courier New", Courier, monospace;
 }
 
 ul,
