--- a/css/main_section.css
+++ b/css/main_section.css
@@ -1,9 +1,30 @@
-.main_section{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url("../assets/mountains.webp");
-    background-position: center;
-    min-height: 50dvh;
-    background-size: cover;
+.main_section {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	padding: 2em;
+	align-items: center;
+	background-image: url("../assets/mountains.webp");
+	background-position: center;
+	min-height: 50dvh;
+	background-size: cover;
+	gap: 1em;
+}
+
+.main_section p {
+	max-width: 400px;
+	padding: 1em;
+	background-color: rgb(255 255 255 / 29%);
+	backdrop-filter: blur(3px);
+	border-radius: 4px;
+	border: 1px solid #ffffff82;
+}
+
+.main_section button {
+	padding: 1em;
+	margin-top: 1em;
+	border: none;
+	background-color: rgba(39, 39, 39, 0.568);
+	color: white;
+	cursor: pointer;
 }
